--- a/BootMVCSnakes/build.gradle
+++ b/BootMVCSnakes/build.gradle
@@ -5,7 +5,7 @@ plugins {
 
 apply plugin: 'io.spring.dependency-management'
 
-group = 'JPASnakes On a Plane!'
+group = 'com.skilldistillery'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
 
