--- a/BootMVCSnakes/src/main/resources/application.properties
+++ b/BootMVCSnakes/src/main/resources/application.properties
@@ -14,13 +14,13 @@ spring.jpa.open-in-view=false
 
 #### PORT CONFIG ####
 ##### Alternate Tomcat port
-server.port=8081
+server.port=8675
 
 
 #### JSP VIEW RESOLVER ####
 ##### Include if you used a ViewResolver to shorten the names of your views
-# spring.mvc.view.prefix: /WEB-INF/
-# spring.mvc.view.suffix: .jsp
+ spring.mvc.view.prefix: /WEB-INF/
+ spring.mvc.view.suffix: .jsp
 
 #### TOMCAT ####
 spring.datasource.tomcat.max-active=10
