--- a/BootMVCSnakes/src/main/resources/application.properties
+++ b/BootMVCSnakes/src/main/resources/application.properties
@@ -19,7 +19,7 @@ server.port=8675
 
 #### JSP VIEW RESOLVER ####
 ##### Include if you used a ViewResolver to shorten the names of your views
- spring.mvc.view.prefix: /WEB-INF/
+ spring.mvc.view.prefix: /WEB-INF/jsp/
  spring.mvc.view.suffix: .jsp
 
 #### TOMCAT ####
