Major changes to index.jsp and snake.jsp. AddSnake.do is functional, working on modifySnake.do and deleteSnake.do.

--- a/BootMVCSnakes/src/main/resources/application.properties
+++ b/BootMVCSnakes/src/main/resources/application.properties
@@ -9,7 +9,7 @@ logging.level.root=WARN
 logging.level.org.springframework.web=WARN
 logging.level.org.hibernate.SQL=WARN
 logging.level.org.hibernate.type=WARN
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.open-in-view=false
 
 #### PORT CONFIG ####
