--- a/BootMVCSnakes/src/main/resources/application.properties
+++ b/BootMVCSnakes/src/main/resources/application.properties
@@ -23,6 +23,7 @@ server.port=8675
  spring.mvc.view.suffix: .jsp
 
 #### TOMCAT ####
+spring.jmx.default-domain=JPACRUDProject
 spring.datasource.tomcat.max-active=10
 spring.datasource.dbcp2.max-idle=8
 spring.datasource.dbcp2.max-wait-millis=10000
